--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,67 @@
-.project
-.settings
-/target
+# Copied from https://github.com/github/gitignore
 
-api/.classpath
-api/.project
-api/.settings
-api/target
-
-omod/.classpath
-omod/.project
-omod/.settings
-omod/target
-
-*.DS_Store
+### IntelliJ Idea ###
 *.iml
+*.ipr
+*.iws
+.idea/
+
+### Maven ###
+target/
+#############
+
+### Eclipse ###
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# CDT-specific
+.cproject
+
+# PDT-specific
+.buildpath
+###############
+
+### Java ###
+*.class
+
+# Java Package Files #
+*.jar
+*.war
+*.ear
+############
+
+### Netbeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+################
+
+### Linux ###
+.*
+!.gitignore
+!.gitattributes
+*~
+#############
+
