Updated pom to use latest 2.0 releases of uiframework and uilibrary

--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,8 @@
 
 	<properties>
 		<openMRSVersion>1.9.1</openMRSVersion>
-		<uiframeworkVersion>2.0-SNAPSHOT</uiframeworkVersion>
-		<uilibraryVersion>2.0-SNAPSHOT</uilibraryVersion>
+		<uiframeworkVersion>2.0</uiframeworkVersion>
+		<uilibraryVersion>2.0</uilibraryVersion>
 		<appframeworkVersion>1.3</appframeworkVersion>
 		<metadatasharingVersion>1.0.10</metadatasharingVersion>
 		<htmlformentryVersion>2.0</htmlformentryVersion>
