Allow the DataSetDefinitions created by our ReportManagers to be accessed via RESTWS and reportingrest

--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -18,6 +18,18 @@
 			<artifactId>${project.parent.artifactId}-api</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>reportingrest-omod</artifactId>
+            <version>${reportingrestVersion}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>webservices.rest-omod</artifactId>
+            <version>${webservicesRestVersion}</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
