Fixed broken build date timestamp from commit 123a6367ae7030b2717ea0677fe43ff12c78c079

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,8 @@
         <reportingrestVersion>1.2</reportingrestVersion>
         
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.build.timestamp.format>dd-MMM-yyyy</maven.build.timestamp.format>
+		<moduleBuildDate>${maven.build.timestamp}</moduleBuildDate>
 	</properties>
 
 	<dependencies>
