--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 
 	<groupId>org.openmrs.module</groupId>
 	<artifactId>kenyaemr</artifactId>
-	<version>2012.1.3-SNAPSHOT</version>
+	<version>2012.2-SNAPSHOT</version>
+
 	<packaging>pom</packaging>
 	<name>Kenya OpenMRS EMR Module</name>
 	<description>OpenMRS-based EMR for Kenya</description>
-	<url>https://wiki.openmrs.org/display/docs/Kenya+OpenMRS+EMR+Module</url>
 
 	<developers>
 		<developer>
@@ -16,8 +16,8 @@
 	</developers>
 
 	<organization>
-		<name>OpenMRS</name>
-		<url>http://openmrs.org</url>
+		<name>I-TECH</name>
+		<url>http://www.go2itech.org</url>
 	</organization>
 
 	<scm>
