--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>org.openmrs.module</groupId>
 	<artifactId>kenyaemr</artifactId>
-	<version>2012.2-SNAPSHOT</version>
+	<version>2012.2</version>
 
 	<packaging>pom</packaging>
 	<name>Kenya OpenMRS EMR Module</name>
