Removed copy of testData.xml from omod project and gave it access to test/resources in api project instead

--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -59,6 +59,10 @@
 
 		<testResources>
 			<testResource>
+				<directory>../api/src/test/resources</directory>
+				<filtering>true</filtering>
+			</testResource>
+			<testResource>
 				<directory>src/test/resources</directory>
 				<filtering>true</filtering>
 			</testResource>
