Changed final name of distro from kenyaemr-distro-VERSION-distro.zip to kenyaemr-distro-VERSION.zip

--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -102,6 +102,7 @@
 							<descriptors>
 								<descriptor>${basedir}/src/main/assembly/assembly.xml</descriptor>
 							</descriptors>
+							<appendAssemblyId>false</appendAssemblyId>
 						</configuration>
 						<executions>
 							<execution>
