--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,12 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.ocpsoft.prettytime</groupId>
+			<artifactId>prettytime</artifactId>
+			<version>2.1.2.Final</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>net.sf.opencsv</groupId>
