--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: java
 jdk:
-  - oraclejdk7
-  - openjdk7
-  - openjdk6
+ - openjdk6
+ - oraclejdk6
+ - oraclejdk7
+script: mvn clean install --batch-mode
+matrix:
+  allow_failures:
+    - jdk: oraclejdk7
+notifications:
+  email: false
