--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 		<uilibraryVersion>2.0.2</uilibraryVersion>
 		<appframeworkVersion>1.3</appframeworkVersion>
 		<metadatasharingVersion>1.0.10</metadatasharingVersion>
-		<htmlformentryVersion>2.0.2</htmlformentryVersion>
+		<htmlformentryVersion>2.0.3-SNAPSHOT</htmlformentryVersion>
 		<htmlformentry19extVersion>0.9</htmlformentry19extVersion>
 		<moduledistroVersion>1.2</moduledistroVersion>
 		<calculationVersion>1.0</calculationVersion>
