Added metadata package of all locations loaded from MFL * New package added to api/src/resources * MFL Code attribute type moved from core package into this new package * Updated metadata import mode to MIRROR * Updated metadatasharing module to 1.1.2 and added metadatamapping 1.0.1 dependency Note * Omod has grown by 3MB thanks to omod plugin bug that duplicates all api/src/resources files twice

--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -46,6 +46,7 @@
 											<url url="https://modules.openmrs.org/modules/download/reporting/reporting-${reportingVersion}.omod" />
 											<url url="https://modules.openmrs.org/modules/download/htmlwidgets/htmlwidgets-${htmlwidgetsVersion}.omod" />
 											<url url="https://modules.openmrs.org/modules/download/serialization.xstream/serialization.xstream-${serializationxstreamVersion}.omod" />
+											<url url="https://modules.openmrs.org/modules/download/metadatamapping/metadatamapping-${metadatamappingVersion}.omod" />
 											<url url="https://modules.openmrs.org/modules/download/metadatasharing/metadatasharing-${metadatasharingVersion}.omod" />
 											<url url="https://modules.openmrs.org/modules/download/idgen/idgen-${idgenVersion}.omod" />
 											<url url="https://modules.openmrs.org/modules/download/htmlformentry/htmlformentry-${htmlformentryVersion}.omod" />
