--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,8 @@
 		<uiframeworkVersion>2.4</uiframeworkVersion>
 		<uilibraryVersion>2.0.3.1</uilibraryVersion>
 		<appframeworkVersion>1.3</appframeworkVersion>
-		<metadatasharingVersion>1.0.10</metadatasharingVersion>
+		<metadatamappingVersion>1.0.1</metadatamappingVersion>
+		<metadatasharingVersion>1.1.2</metadatasharingVersion>
 		<htmlformentryVersion>2.0.3</htmlformentryVersion>
 		<htmlformentry19extVersion>0.9</htmlformentry19extVersion>
 		<moduledistroVersion>1.2</moduledistroVersion>
@@ -71,6 +72,13 @@
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>appframework-api</artifactId>
 			<version>${appframeworkVersion}</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>metadatamapping-api</artifactId>
+			<version>${metadatamappingVersion}</version>
 			<scope>provided</scope>
 		</dependency>
 
