--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>kenyaemr</artifactId>
-		<version>2013.1-SNAPSHOT</version>
+		<version>2013.1</version>
 	</parent>
 
 	<artifactId>kenyaemr-distro</artifactId>
