Improved loading of metadata packages * Listing of packages moved into XML file (packages.xml) * All metadata files moved into a subfolder in resources * Unit test for metadata package loading working with its own test package

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -51,7 +51,7 @@
 		<testResources>
 			<testResource>
 				<directory>src/test/resources</directory>
-				<filtering>true</filtering>
+				<filtering>false</filtering>
 			</testResource>
 		</testResources>
 	</build>
