--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 	<properties>
 		<openMRSVersion>1.9.1</openMRSVersion>
 		<uiframeworkVersion>2.4</uiframeworkVersion>
-		<uilibraryVersion>2.0.3.1</uilibraryVersion>
+		<uilibraryVersion>2.0.4-SNAPSHOT</uilibraryVersion>
 		<appframeworkVersion>1.3</appframeworkVersion>
 		<metadatamappingVersion>1.0.1</metadatamappingVersion>
 		<metadatasharingVersion>1.1.2</metadatasharingVersion>
