Replaced ContextProvider with calls to use Context.getRegisteredComponents * Build properties now has its own class instead of being just a map

--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
         <reportingrestVersion>1.2</reportingrestVersion>
         
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.build.timestamp.format>dd-MMM-yyyy</maven.build.timestamp.format>
+		<maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
 		<moduleBuildDate>${maven.build.timestamp}</moduleBuildDate>
 	</properties>
 
