Updated all references to uilibrary to point to new kenyaui module

--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -40,7 +40,7 @@
 									<target>
 										<get dest="target/distro" verbose="true" usetimestamp="true">
 											<url url="https://modules.openmrs.org/modules/download/uiframework/uiframework-${uiframeworkVersion}.omod" />
-											<url url="https://modules.openmrs.org/modules/download/uilibrary/uilibrary-${uilibraryVersion}.omod" />
+											<url url="https://modules.openmrs.org/modules/download/kenyaui/kenyaui-${kenyauiVersion}.omod" />
 											<url url="https://modules.openmrs.org/modules/download/appframework/appframework-${appframeworkVersion}.omod" />
 											<url url="https://modules.openmrs.org/modules/download/htmlformentry19ext/htmlformentry19ext-${htmlformentry19extVersion}.omod" />
 											<url url="https://modules.openmrs.org/modules/download/reporting/reporting-${reportingVersion}.omod" />
