--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<version>2013.2-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
-	<name>Kenya OpenMRS EMR Module</name>
+	<name>Kenya OpenMRS EMR</name>
 	<description>OpenMRS-based EMR for Kenya</description>
 
 	<developers>
@@ -36,7 +36,7 @@
 	<properties>
 		<openMRSVersion>1.9.3</openMRSVersion>
 		<uiframeworkVersion>2.4</uiframeworkVersion>
-		<kenyauiVersion>1.1</kenyauiVersion>
+		<kenyauiVersion>1.2-SNAPSHOT</kenyauiVersion>
 		<appframeworkVersion>1.5</appframeworkVersion>
 		<metadatamappingVersion>1.0.1</metadatamappingVersion>
 		<metadatasharingVersion>1.1.2</metadatasharingVersion>
@@ -60,6 +60,13 @@
 
 	<dependencies>
 		<!-- Begin OpenMRS modules -->
+
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>kenyaui-api</artifactId>
+			<version>${kenyauiVersion}</version>
+			<scope>provided</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
@@ -219,12 +226,6 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-
-		<dependency>
-			<groupId>org.ocpsoft.prettytime</groupId>
-			<artifactId>prettytime</artifactId>
-			<version>2.1.2.Final</version>
-		</dependency>
 		
 		<dependency>
 			<groupId>net.sf.opencsv</groupId>
@@ -268,6 +269,15 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
 					<version>2.4</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-release-plugin</artifactId>
+					<version>2.3.2</version>
+					<configuration>
+						<autoVersionSubmodules>true</autoVersionSubmodules>
+						<tagNameFormat>@{project.version}</tagNameFormat>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
