--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,11 @@
 	<properties>
 		<openMRSVersion>1.9.3</openMRSVersion>
 		<uiframeworkVersion>2.5</uiframeworkVersion>
-		<kenyauiVersion>1.3.2</kenyauiVersion>
+		<kenyauiVersion>1.3.3</kenyauiVersion>
 		<appframeworkVersion>1.5</appframeworkVersion>
 		<metadatamappingVersion>1.0.1</metadatamappingVersion>
 		<metadatasharingVersion>1.1.3</metadatasharingVersion>
-		<htmlformentryVersion>2.0.7</htmlformentryVersion>
+		<htmlformentryVersion>2.0.8</htmlformentryVersion>
 		<htmlformentry19extVersion>0.9</htmlformentry19extVersion>
 		<moduledistroVersion>1.2</moduledistroVersion>
 		<calculationVersion>1.0</calculationVersion>
@@ -240,12 +240,28 @@
 			<scope>test</scope>
 		</dependency>
 
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-all</artifactId>
-            <version>1.3</version>
-            <scope>test</scope>
-        </dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.6.0</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-core-asl</artifactId>
+			<version>1.6.0</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
 		
 	</dependencies>
 
