Tidied up branding of KenyaEMR * Moved logos into this module from KenyaUI * Updated ministry name on page header * Cleaned up all references to "Kenya EMR" to be "KenyaEMR"

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -9,8 +9,8 @@
 
 	<artifactId>kenyaemr-api</artifactId>
 	<packaging>jar</packaging>
-	<name>Kenya OpenMRS EMR Module API</name>
-	<description>API project for Kenya OpenMRS EMR</description>
+	<name>KenyaEMR Module API</name>
+	<description>API project for KenyaEMR Module</description>
 	
 	<build>
 		<pluginManagement>
