--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -9,8 +9,8 @@
 
 	<artifactId>kenyaemr-omod</artifactId>
 	<packaging>jar</packaging>
-	<name>Kenya OpenMRS EMR Module OMOD</name>
-	<description>OMOD project for KenyaOpenMRSEMR</description>
+	<name>KenyaEMR Module OMOD</name>
+	<description>OMOD project for KenyaEMR Module</description>
 
 	<dependencies>
 		<dependency>
