--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<version>2013.2-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
-	<name>Kenya OpenMRS EMR</name>
+	<name>KenyaEMR</name>
 	<description>OpenMRS-based EMR for Kenya</description>
 
 	<developers>
@@ -36,7 +36,7 @@
 	<properties>
 		<openMRSVersion>1.9.3</openMRSVersion>
 		<uiframeworkVersion>2.5.2</uiframeworkVersion>
-		<kenyauiVersion>1.3.17</kenyauiVersion>
+		<kenyauiVersion>1.4</kenyauiVersion>
 		<appframeworkVersion>1.5</appframeworkVersion>
 		<metadatamappingVersion>1.0.1</metadatamappingVersion>
 		<metadatasharingVersion>1.1.8</metadatasharingVersion>
