Updated test classes to use TestUtils from kenyautil-test

--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
 		<openMRSVersion>1.9.3</openMRSVersion>
 
 		<!-- Module dependencies -->
-		<kenyautilVersion>0.2</kenyautilVersion>
-		<kenyacoreVersion>0.2</kenyacoreVersion>
+		<kenyautilVersion>0.2.1</kenyautilVersion>
+		<kenyacoreVersion>0.2.1</kenyacoreVersion>
 		<kenyauiVersion>1.8</kenyauiVersion>
 		<uiframeworkVersion>2.6</uiframeworkVersion>
 		<appframeworkVersion>1.5</appframeworkVersion>
@@ -70,6 +70,13 @@
 			<artifactId>kenyautil-api</artifactId>
 			<version>${kenyautilVersion}</version>
 			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>kenyautil-test</artifactId>
+			<version>${kenyautilVersion}</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
