--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 		<htmlwidgetsVersion>1.6.4</htmlwidgetsVersion>
 		<idgenVersion>2.5</idgenVersion>
 		<kenyacoreVersion>0.7</kenyacoreVersion>
+		<kenyalabVersion>0.1</kenyalabVersion>
 		<kenyauiVersion>1.9.2</kenyauiVersion>
 		<logicVersion>0.5.2</logicVersion>
 		<metadatamappingVersion>1.0.1</metadatamappingVersion>
@@ -118,6 +119,13 @@
 			<artifactId>kenyacore-test</artifactId>
 			<version>${kenyacoreVersion}</version>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>kenyalab-api</artifactId>
+			<version>${kenyalabVersion}</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
