--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 		<htmlwidgetsVersion>1.6.4</htmlwidgetsVersion>
 		<idgenVersion>2.5</idgenVersion>
 		<kenyacoreVersion>0.8.1</kenyacoreVersion>
+		<kenyadqVersion>0.1</kenyadqVersion>
 		<!--<kenyalabVersion>0.1.2</kenyalabVersion>-->
 		<kenyauiVersion>1.12.2</kenyauiVersion>
 		<logicVersion>0.5.2</logicVersion>
