--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 		<htmlwidgetsVersion>1.6.5</htmlwidgetsVersion>
 		<idgenVersion>2.6</idgenVersion>
 		<kenyacoreVersion>0.15-SNAPSHOT</kenyacoreVersion>
-		<kenyauiVersion>1.12.9</kenyauiVersion>
+		<kenyauiVersion>1.13-SNAPSHOT</kenyauiVersion>
 		<logicVersion>0.5.2</logicVersion>
 		<metadatamappingVersion>1.0.1</metadatamappingVersion>
 		<metadatasharingVersion>1.1.8</metadatasharingVersion>
