--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
 		<webservicesRestVersionRepo>1.1.29293</webservicesRestVersionRepo>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
+		<maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ssZ</maven.build.timestamp.format>
 		<moduleBuildDate>${maven.build.timestamp}</moduleBuildDate>
 	</properties>
 
