Updated kenyaui version to 1.13

--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 		<htmlwidgetsVersion>1.6.5</htmlwidgetsVersion>
 		<idgenVersion>2.6</idgenVersion>
 		<kenyacoreVersion>0.16</kenyacoreVersion>
-		<kenyauiVersion>1.13-SNAPSHOT</kenyauiVersion>
+		<kenyauiVersion>1.13</kenyauiVersion>
 		<logicVersion>0.5.2</logicVersion>
 		<metadatadeployVersion>0.1</metadatadeployVersion>
 		<metadatamappingVersion>1.0.1</metadatamappingVersion>
