--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>org.openmrs.module</groupId>
 	<artifactId>kenyaemr</artifactId>
-	<version>13.3-RC2</version>
+	<version>13.3-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 	<name>KenyaEMR</name>
