--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>org.openmrs.module</groupId>
 	<artifactId>kenyaemr</artifactId>
-	<version>13.3-RC3</version>
+	<version>13.3-RC4-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 	<name>KenyaEMR</name>
@@ -24,7 +24,7 @@
 		<connection>scm:git:git@github.com:I-TECH/openmrs-module-kenyaemr.git</connection>
 		<developerConnection>scm:git:git@github.com:I-TECH/openmrs-module-kenyaemr.git</developerConnection>
 		<url>scm:git:git@github.com:I-TECH/openmrs-module-kenyaemr.git</url>
-	  <tag>13.3-RC3</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<modules>
