Updated kenyacore to 1.0

--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 		<htmlformentry19extVersion>0.9</htmlformentry19extVersion>
 		<htmlwidgetsVersion>1.6.5</htmlwidgetsVersion>
 		<idgenVersion>2.6</idgenVersion>
-		<kenyacoreVersion>1.0-SNAPSHOT</kenyacoreVersion>
+		<kenyacoreVersion>1.0</kenyacoreVersion>
 		<kenyauiVersion>1.13.3</kenyauiVersion>
 		<metadatadeployVersion>0.2</metadatadeployVersion>
 		<metadatamappingVersion>1.0.1</metadatamappingVersion>
