--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 		<htmlwidgetsVersion>1.6.5</htmlwidgetsVersion>
 		<idgenVersion>2.6</idgenVersion>
 		<kenyacoreVersion>1.0</kenyacoreVersion>
-		<kenyauiVersion>1.13.3</kenyauiVersion>
+		<kenyauiVersion>1.13.4-SNAPSHOT</kenyauiVersion>
 		<metadatadeployVersion>0.2</metadatadeployVersion>
 		<metadatamappingVersion>1.0.1</metadatamappingVersion>
 		<metadatasharingVersion>1.1.8</metadatasharingVersion>
