Changes to dependencies * Updated to reporting 0.8.1-SNAPSHOT * Organised module versions into dependencies of kenyaemr and additional distro modules

--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -74,7 +74,7 @@
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>kenyaemr-omod</artifactId>
-			<version>${kenyaemrVersion}</version>
+			<version>${project.parent.version}</version>
 		</dependency>
 
 		<dependency>
@@ -244,7 +244,7 @@
 								<id>make-assembly</id>
 								<phase>package</phase>
 								<configuration>
-									<finalName>${parent.artifactId}-${parent.version}</finalName>
+									<finalName>${project.parent.artifactId}-${project.parent.version}</finalName>
 								</configuration>
 								<goals>
 									<goal>single</goal>
