--- a/pom.xml
+++ b/pom.xml
@@ -37,25 +37,26 @@
 	<properties>
 		<openMRSVersion>1.9.7</openMRSVersion>
 
-		<!-- Module dependencies -->
+		<!-- Dependency modules -->
 		<appframeworkVersion>1.5</appframeworkVersion>
 		<calculationVersion>1.0</calculationVersion>
-		<groovyVersion>2.2.4</groovyVersion>
 		<htmlformentryVersion>2.2.1</htmlformentryVersion>
 		<htmlformentry19extVersion>1.4</htmlformentry19extVersion>
 		<htmlwidgetsVersion>1.6.5</htmlwidgetsVersion>
 		<idgenVersion>2.6</idgenVersion>
 		<kenyacoreVersion>1.0</kenyacoreVersion>
-		<kenyaemrVersion>${project.version}</kenyaemrVersion>
-		<kenyadqVersion>0.2.7</kenyadqVersion>
 		<kenyauiVersion>1.13.4-SNAPSHOT</kenyauiVersion>
 		<logicVersion>0.5.2</logicVersion>
 		<metadatadeployVersion>0.2</metadatadeployVersion>
 		<metadatamappingVersion>1.0.1</metadatamappingVersion>
 		<metadatasharingVersion>1.1.8</metadatasharingVersion>
-		<reportingVersion>0.8</reportingVersion>
+		<reportingVersion>0.8.1-SNAPSHOT</reportingVersion>
 		<serializationxstreamVersion>0.2.7</serializationxstreamVersion>
 		<uiframeworkVersion>3.1</uiframeworkVersion>
+
+		<!-- Additional distro modules -->
+		<groovyVersion>2.2.4</groovyVersion>
+		<kenyadqVersion>0.2.7</kenyadqVersion>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ssZ</maven.build.timestamp.format>
