Updated to latest reporting and kenyacore * Removed ReportProfiler as its functionality was moved into reporting

--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 		<htmlformentry19extVersion>1.4</htmlformentry19extVersion>
 		<htmlwidgetsVersion>1.6.5</htmlwidgetsVersion>
 		<idgenVersion>2.6</idgenVersion>
-		<kenyacoreVersion>1.0</kenyacoreVersion>
+		<kenyacoreVersion>1.1-SNAPSHOT</kenyacoreVersion>
 		<kenyauiVersion>1.13.4-SNAPSHOT</kenyauiVersion>
 		<logicVersion>0.5.2</logicVersion>
 		<metadatadeployVersion>0.2</metadatadeployVersion>
