Updated CIEL requirement checking logic so that required version can be declared as a POM property

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
 
 	<properties>
 		<openMRSVersion>1.9.7</openMRSVersion>
+		<cielVersion>20140101</cielVersion>
 
 		<!-- Dependency modules -->
 		<appframeworkVersion>1.5</appframeworkVersion>
