--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>kenyaemr</artifactId>
-		<version>13.3-RC5</version>
+		<version>13.3-RC6-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>kenyaemr-distro</artifactId>
